# History1

./: .dockerignore  Dockerfile  LICENSE  README.md  db.csv  docker-compose.yml  main.py  models.py  nginx.conf  pyproject.toml  seed_pg.py
static/css/: home.css  train.css
static/js/: home.js  train.js
templates/: home.html  train.html
